--- a/css/index.css
+++ b/css/index.css
@@ -71,12 +71,28 @@ p {
     margin: 0 auto;
 }
 
+/* Nav */
+.navigation-style{
+    display:flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 20px 0 40px 0;
+}
+.navigation-style a{
+    color:black;
+    text-decoration: none;
+}
+
 .top-content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
+}
+
+.top-content img{
+    margin-bottom: 25px;
 }
 
 .top-content .text-container {
@@ -143,4 +159,36 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+/* styling of individual boxes */
+#box1{ 
+    background-color:teal;
+}
+#box2{ 
+    background-color:gold;
+}
+#box3{ 
+    background-color:cadetblue;
+}
+#box4{ 
+    background-color:coral;
+}
+#box5{ 
+    background-color: crimson;
+}
+#box6{ 
+    background-color: forestgreen;
+}
+#box7{ 
+    background-color: darkorchid;
+}
+#box8{ 
+    background-color: hotpink;
+}
+#box9{ 
+    background-color: indigo;
+}
+#box10{ 
+    background-color: dodgerblue;
 }
